--- a/.github/workflows/download-logos.yml
+++ b/.github/workflows/download-logos.yml
@@ -1,13 +1,15 @@
-name: Download and Convert Logos
+name: Update Logos
 
 on:
-  workflow_dispatch: # Allows you to run this manually
+  schedule:
+    - cron: '0 4 * * 1' # Runs every Monday at 4 AM
+  workflow_dispatch:
 
 permissions:
   contents: write
 
 jobs:
-  build-logos:
+  update-logos:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repo
@@ -24,7 +26,7 @@ jobs:
       - name: Install Python Dependencies
         run: pip install beautifulsoup4 requests cairosvg
 
-      - name: Fetch, Convert, and Save Logos
+      - name: Fetch, Convert, and Save New Logos
         shell: python
         run: |
           import os, json, requests
@@ -32,17 +34,16 @@ jobs:
           import cairosvg
 
           HEADERS = {'User-Agent': 'Mozilla/5.0'}
-          LEAGUE_SLUGS = [
-              "premier-league", "championship", "league-one", "league-two"
-          ]
-          
-          # This map will link a team's full name to its new PNG logo file
-          final_logo_map = {}
+          LEAGUE_SLUGS = ["premier-league", "championship", "league-one", "league-two"]
           output_dir = 'assets/logos'
           os.makedirs(output_dir, exist_ok=True)
 
+          # Get a list of logos we already have
+          existing_logos = {f.split('.')[0] for f in os.listdir(output_dir)}
+          new_logos_found = False
+
           for slug in LEAGUE_SLUGS:
-              print(f"--- Processing {slug} ---")
+              print(f"--- Checking {slug} for new teams ---")
               table_url = f"https://www.bbc.co.uk/sport/football/{slug}/table"
               try:
                   html_content = requests.get(table_url, headers=HEADERS).text
@@ -56,40 +57,33 @@ jobs:
                       
                       team_name_span = cells[0].find('span', class_='visually-hidden')
                       team_name = team_name_span.get_text(strip=True) if team_name_span else None
+                      file_slug = ''.join(c for c in team_name.lower().replace('&', 'and').replace(' ', '-') if c.isalnum() or c == '-')
                       
-                      logo_img = cells[0].find('img', class_=lambda c: c and 'BadgeImage' in c)
-                      logo_url_svg = logo_img['src'] if logo_img else None
-
-                      if team_name and logo_url_svg:
-                          print(f"Processing {team_name}...")
-                          # Create a clean filename
-                          file_slug = ''.join(c for c in team_name.lower().replace('&', 'and').replace(' ', '-') if c.isalnum() or c == '-')
-                          output_path = f"{output_dir}/{file_slug}.png"
-                          
-                          # Download SVG and convert to PNG
-                          svg_content = requests.get(logo_url_svg).content
-                          cairosvg.svg2png(bytestring=svg_content, write_to=output_path)
-                          
-                          # Store the path for our map file
-                          final_logo_map[team_name] = output_path
+                      # If we don't already have this logo, download it
+                      if team_name and file_slug not in existing_logos:
+                          logo_img = cells[0].find('img', class_=lambda c: c and 'BadgeImage' in c)
+                          logo_url_svg = logo_img['src'] if logo_img else None
+                          if logo_url_svg:
+                              print(f"  -> New team found: {team_name}. Downloading logo.")
+                              new_logos_found = True
+                              output_path = f"{output_dir}/{file_slug}.png"
+                              svg_content = requests.get(logo_url_svg).content
+                              cairosvg.svg2png(bytestring=svg_content, write_to=output_path)
               except Exception as e:
                   print(f"⚠️ Could not process {slug}: {e}")
                   continue
+          
+          if not new_logos_found:
+              print("✅ No new logos to add.")
 
-          # Save the map file for the EPG script to use
-          with open('logo_map.json', 'w') as f:
-              json.dump(final_logo_map, f, indent=2)
-
-          print(f"✅ Finished! Processed {len(final_logo_map)} logos.")
-
-      - name: Commit Logos and Map File
+      - name: Commit New Logos
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add assets/logos/*.png logo_map.json
+          git add assets/logos/*.png
           if git diff --staged --quiet; then
-            echo "🟢 No new logos found."
+            echo "🟢 No new logos to commit."
           else
-            git commit -m "🖼️ Add converted team logos and map file"
+            git commit -m "🖼️ Add new team logos"
             git push
           fi
